--- a/src/JSON/projects.json
+++ b/src/JSON/projects.json
@@ -4,41 +4,47 @@
         "title": "Marvel Review App",
         "demoLink": "https://loganveik.github.io/marvelproject/",
         "repoLink": "https://github.com/loganveik/marvelapp",
-        "description": "This app was created using: Handlebars, Bootstrap, css3, Javascript, jQuery, ajax, NodeJS, Express, MySQL, Sequelize, Passport, Bcrypt and the Marvel API. This app, once signed in, lets the user search for any character/comicbook. The user may also create a character review as well as view any review."
+        "description": "This app, once signed in, lets the user search for any character/comicbook. The user may also create a character review as well as view any review.",
+        "languages": "Handlebars, Bootstrap4, CSS3, Javascript, jQuery, Ajax, NodeJS, Express, MySQL, Sequelize, Passport, Bcrypt, Marvel API."
     },
     {
         "id": 2,
         "title": "Table Scraps",
         "demoLink": "https://tablescraps.herokuapp.com/",
         "repoLink": "https://github.com/ahaymond-dev/recipeManager",
-        "description":"This app was created using: html5, css3, javascript, bootstrap, node, express, REACT, Mongodb and mongoose. This is a recipe costing app geared towards the restaurant business. Once signed in, you create a recipe by searching ingredients, listing the proper prices and weight of each ingredient. And we tell you exactly how much your recipe will cost so that you know exactly how many grams of each ingredient to get to prevent wasting food and money."
+        "description":"Recipe costing app that prevents money and food waste. User can add ingredients to their recipe which displays total cost of all ingredients.",
+        "languages": "React, Bootstrap4, CSS3, Javascript, jQuery, Axios, NodeJS, Express, MongoDB, Mongoose, Passport, Bcrypt, usda.gov API."
     },
     {
         "id": 3,
         "title": "Personality Test",
         "demoLink": "https://whats-my-life.herokuapp.com/",
         "repoLink": "https://github.com/shanscirg/project2",
-        "description":"This app was created using: handlebars, css3, Jquery, nodejs, express, javascript, bootstrap, mySQL, and Sequelize. Click the begin button, take the test, fill out form at bottom to sign in, and then view youre results."
+        "description":"Click the begin button, take the test, fill out form at bottom to sign in, and then view youre results.",
+        "languages": "Handlebars, Bootstrap4, CSS3, Javascript, jQuery, Ajax, NodeJS, Express, MySQL, Sequelize, Bcrypt."
     },
     {
         "id": 4,
-        "title": "Topic Search",
-        "demoLink": "https://Ethan25Irvine.github.io/Project-1/",
-        "repoLink": "https://github.com/Ethan25Irvine/Project-1",
-        "description":"This app was created using: html5, css3, Jquery, javascript, bootstrap and the Google News, Billboard, and Youtube API's. On the top of the oage you can search any topic whether it be a person, world event, a song etc. and you'll be presented with the first 5 results from the youtube and google api's."
+        "title": "topicsearch.",
+        "demoLink": "https://loganveik.github.io/topicsearch/",
+        "repoLink": "https://github.com/loganveik/topicsearch",
+        "description":"This is a basic topic search app. Once topic is entered and searched, user will be displayed with 3 fun gif cards, and 4 related news articles with links to the original article.",
+        "languages": "HTML5, Bootstrap4, CSS3, Javascript, jQuery, Ajax, GNews API, Giphy API."
     },
     {
         "id": 5,
         "title": "Weather Dashboard",
         "demoLink": "https://loganveik.github.io/weatherdashboard/",
         "repoLink": "https://github.com/loganveik/weatherdashboard",
-        "description":"This app was created using: html5, css3, Jquery, javascript, bootstrap and the openweathermap API. First, youll be asked to search a city and once you enter it and press search, the ajax will run with your query and you'll be displayed with the current day's forecasr as well as the 5 day forecast. this is using the current day, uv index, and 5day API's from openweathermap"
+        "description":"This is a front-end, simple weather application. You enter a city and you are displayed with the current forecast as well as a 5-day forecast.",
+        "languages": "HTML5, Bootstrap4, CSS3, Javascript, jQuery, Ajax, Openweathermap API."
     },
     {
         "id": 6,
         "title": "Employee Directory",
         "demoLink": "https://employeedirectorylv.netlify.app/",
         "repoLink": "https://github.com/loganveik/reactEmployeeDirectory",
-        "description":"This app was created using: css3, javascript, bootstrap and React. This app is basically a list of all office characters and you can search the list, or filter by department. You can even sort by Alphabetical order."
+        "description":"This app is basically a list of all office characters and you can search the list, or filter by department. You can even sort by Alphabetical order.",
+        "languages": "React, Bootstrap4, CSS3, Javascript, NodeJS, Express."
     }
 ]
